@@ -1,4 +1,4 @@
-.TH SG_RAW "8" "May 2018" "sg3_utils\-1.43" SG3_UTILS
+.TH SG_RAW "8" "December 2018" "sg3_utils\-1.45" SG3_UTILS
 .SH NAME
 sg_raw \- send arbitrary SCSI command to a device
 .SH SYNOPSIS
