@@ -2,13 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.45 [20181217] [svn: r798]
+Changelog for sg3_utils-1.45 [20181220] [svn: r800]
   - sg_ses: bug: --page= being overridden when --control
     and --data= also given; fix
   - sg_opcodes: expand MLU (18-102r0)
   - sg_write_buffer: allow comma and period separated
     lists when input from stdin
   - sg_format: add --dcrt used twice (FOV=1 DCRT=0)
+  - sg_raw: fix --send bug when using stdin
   - sg_scan (win32): expand limits for big arrays
   - rescan-scsi-bus: widen LUN 0 only scanning
   - testing/sg_tst_async: fix free_list issue
